[package]
name = "latency-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
chrono = { version = "0.4.31", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.4.6", features = ["derive"] }
# TODO: Use git dep
dump-analyser = { path = "../dump-analyser/analyser", version = "0.1.0" }
env_logger = "0.10.0"
ethercrab = { version = "0.3.1", path = "../ethercrab" }
futures = { version = "0.3.28", default-features = false }
futures-lite = "1.13.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
smol = "1.3.0"
sqlx = { version = "0.7.2", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "macros",
    "json",
] }
thread-priority = "0.13.1"
tokio = { version = "1.33.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
